--- a/index.html
+++ b/index.html
@@ -8,13 +8,34 @@
     <title>Biker Zone</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<style>
+    .font-poppins-400{
+        font-family: poppins;
+        font-weight: 400;
+    }
+    .font-poppins-600{
+        font-family: poppins;
+        font-weight: 600;
+    }
+    .font-poppins-700{
+        font-family: poppins;
+        font-weight: 700;
+    }
+    .font-poppins-800{
+        font-family: poppins;
+        font-weight: 800;
+    }
+</style>
+<body style="font-family: poppins;">
     <header>
         <nav>
             <div class="navbar bg-base-100">
-                <div class="navbar-start">
+                <div class="flex-1">
                     <div class="dropdown">
                         <label tabindex="0" class="btn btn-ghost lg:hidden">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -24,7 +45,7 @@
                             </svg>
                         </label>
                         <ul tabindex="0"
-                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                            class="text-base menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                             <li><a>Home</a></li>
                             <li><a>Shop</a></li>
                             <li><a>News</a></li>
@@ -32,18 +53,18 @@
 
                         </ul>
                     </div>
-                    <a class="btn btn-ghost normal-case text-xl">Biker Zone</a>
+                    <a class="btn btn-ghost normal-case text-4xl font-poppins-700">Biker Zone</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1">
+                    <ul class="text-base menu menu-horizontal px-1">
                         <li><a>Home</a></li>
                         <li><a>Shop</a></li>
                         <li><a>News</a></li>
                         <li><a>Contact</a></li>
                                 </ul>
                 </div>
-                <div class="navbar-end">
-                    <a class="btn btn-warning text-white">Login</a>
+                <div>
+                    <a class="btn btn-warning text-white font-poppins-700 text-xl">Login</a>
                 </div>
             </div>
         </nav>
